# audiogram

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
notebooks/: object_model_intro.ipynb  plotting_audiograms.ipynb  plotting_symbols.ipynb  round_trips.ipynb  wide_format.ipynb
src/audiogram/: __init__.py  asymmetry.py  audiogram.py  canvas.py  metrics.py  plot_mpl.py  plot_spec.py  render_mpl.py  serialization.py  symbols.py
src/audiogram_object/: RG_Aided.csv  RG_Unaided.csv  __init__.py  audio_plot.ipynb  audio_plot_v2.ipynb  audiogram.ipynb  audiogram.py  demo.py  metrics.py  object_plot_testing.ipynb  object_testing.ipynb  plot_mpl.py  render_mpl.py  schema.py  serialization.py  symbols.py
tests/: conftest.py  test_abg.py  test_asymmetry.py  test_core.py  test_plot_spec.py  test_schema.py  test_severity.py  test_soundfield_ci.py  test_speech.py  test_summary.py  test_wide.py
