[project]
name = "audiogram"
version = "0.2.0"
description = "The Audiogram as a Python Object - utilities for creating python representations of clinical audiometric data"
authors = [
    {name = "Jacob Lucas", email = "jake.lucas.ent@gmail.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
keywords = ["audiology", "audiogram", "hearing", "clinical", "otolaryngology", "ENT"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/jlucas4/audiogram"
Repository = "https://github.com/jlucas4/audiogram"
Issues = "https://github.com/jlucas4/audiogram/issues"

[project.optional-dependencies]
plot = ["matplotlib>=3.7,<4.0.0", "numpy>=1.24"]

[tool.poetry]
packages = [{include = "audiogram", from = "src"}]


[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
notebook = "^7.4.4"
ipykernel = "^6.30.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
